update Eq. nos.

--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -364,18 +364,7 @@ Excess carbon used to activate host CCMs
 molC CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-\(j_L\)
-\strut\end{minipage} &
-\begin{minipage}[t]{0.48\columnwidth}\raggedright\strut
-Light absorption rate
-\strut\end{minipage} &
-\begin{minipage}[t]{0.25\columnwidth}\raggedright\strut
-molph CmolS\textsuperscript{-1} d\textsuperscript{-1}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-9
+8
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{CO_2}\)
@@ -387,7 +376,19 @@ CO\textsubscript{2} input to photosynthesis
 molCO\textsubscript{2} CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-10
+9
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+\(j_L\)
+\strut\end{minipage} &
+\begin{minipage}[t]{0.48\columnwidth}\raggedright\strut
+Light absorption rate
+\strut\end{minipage} &
+\begin{minipage}[t]{0.25\columnwidth}\raggedright\strut
+molph CmolS\textsuperscript{-1} d\textsuperscript{-1}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+11
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(r_{CH}\)
@@ -399,7 +400,7 @@ Recycled CO\textsubscript{2} from host turnover
 molCO\textsubscript{2} CmolH\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-11
+12
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(r_{CS}\)
@@ -411,7 +412,7 @@ Recycled CO\textsubscript{2} from symbiont turnover
 molCO\textsubscript{2} CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-12
+13
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{CP}\)
@@ -423,7 +424,7 @@ Photosynthesis rate
 molC CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-13
+14
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{eL}\)
@@ -435,7 +436,7 @@ Light energy in excess of photochemistry
 molph CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-14
+15
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{NPQ}\)
@@ -447,7 +448,7 @@ Total capacity of NPQ
 molph CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-15
+16
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(c_{ROS}\)
@@ -459,7 +460,7 @@ ROS production proportional to baseline
 --
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-16
+17
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(r_{NS}\)
@@ -471,7 +472,7 @@ Recycled nitrogen from symbiont turnover
 molN CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-17
+18
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{SG}\)
@@ -483,7 +484,7 @@ Symbiont biomass formation rate
 CmolS CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-18
+19
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(\rho_C\)
@@ -495,7 +496,7 @@ Fixed carbon shared with host
 molC CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-19
+20
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
 \(j_{ST}\)
@@ -507,12 +508,14 @@ Symbiont turnover rate
 CmolS CmolS\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-20
+21
 \strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
 
-Table 2. Model parameters
+Table 2. Model parameters. Derivations of each parameter value along
+with supporting references are provided in the Supplementary
+Information.
 
 \begin{longtable}[c]{@{}llll@{}}
 \toprule
@@ -862,7 +865,7 @@ that combines carbon and nitrogen, according to:
 
 \begin{equation} j_{HG} = \bigg({1 \over j_{HGm}} + {1 \over {\rho_C{S \over H} + j_X}} + {1 \over {(j_N + n_{NX}j_X + r_{NH}) / n_{NH}}} - {1 \over {{\rho_C{S \over H} + j_X} + (j_N + n_{NX}j_X + r_{NH}) / n_{NH}}}\bigg)^{-1} \end{equation}
 
-where \(\rho_C\) is fixed carbon shared by the symbiont (see Eq. XX),
+where \(\rho_C\) is fixed carbon shared by the symbiont (see Eq. 20),
 and \(r_{NH}\) is recycled nitrogen liberated by host biomass turnover:
 
 \begin{equation} r_{NH}=\sigma_{NH}n_{NH}j_{HT}^0 \end{equation}
@@ -939,7 +942,7 @@ symbiont biomass \(\bar{a}^*\) to specify the total light absorption:
 
 CO\textsubscript{2} arrives at the photosynthesis SU from multiple
 sources: in addition to the CO\textsubscript{2} actively supplied by the
-host through its CCMs (\(j_{CO_2}\); Eq. XX), a fixed proportion of
+host through its CCMs (\(j_{CO_2}\); Eq. 9), a fixed proportion of
 metabolic CO\textsubscript{2} generated by host biomass turnover is
 passively available to the photosynthesis SU, according to:
 
@@ -956,7 +959,7 @@ Fixed carbon is then produced by the photosynthesis SU according to:
 
 where \(j_{CPm}\) is the maximum specific rate of photosynthesis, and
 \(c_{ROS}\) is the relative rate of reactive oxygen species production
-(see Eq. XX). Dividing the photosynthetic rate by \(c_{ROS}\) causes a
+(see Eq. 17). Dividing the photosynthetic rate by \(c_{ROS}\) causes a
 decline in response to photooxidative stress at high light levels, and
 the emergent outcome of this SU formulation demonstrates a classic
 photoinhibition response (Fig. S2).
@@ -995,8 +998,8 @@ lead to ROS production, an important mechanism (Wooldridge 2009) that
 was not captured by previous representations of photooxidative stress
 (Eynaud, Nisbet, and Muller 2011).
 
-Carbon fixed by photosynthesis (\(j_{CP}\); Eq. XX) is then combined
-with nitrogen shared by the host (\(\rho_N\); Eq. XX) and nitrogen
+Carbon fixed by photosynthesis (\(j_{CP}\); Eq. 14) is then combined
+with nitrogen shared by the host (\(\rho_N\); Eq. 7) and nitrogen
 recycled from symbiont biomass turnover
 
 \begin{equation} r_{NS}=\sigma_{NS}n_{NS}j_{ST}^0 \end{equation}
@@ -1222,7 +1225,7 @@ the system maintains internal stability. However, changes in certain
 parameter values have more significant impacts: increasing \(j_{Nm}\) or
 decreasing \(K_N\) both dramatically increase host growth (Fig. 3),
 demonstrating the strong nitrogen-limitation that characterizes these
-symbioses (REF). The parameter \(\bar{a}^*\) has a strong impact on S:H
+symbioses. The parameter \(\bar{a}^*\) has a strong impact on S:H
 biomass ratios (Fig. 3) since this parameter determines the amount of
 light absorbed by symbionts, with lower values increasing
 light-limitation. Increasing the maximum growth and turnover rates have
@@ -1280,7 +1283,7 @@ growth is not limited by low light in winter, but is actually reduced by
 excess light in summer, consistent with the experimental findings of
 Schutter et al. (2011). Seasonal summertime reductions in tissue biomass
 have also been well-documented in the field (Fitt et al. 2000), along
-with reductions in net photosynthetic capacity (\textbf{???}).
+with reductions in net photosynthetic capacity (Muller-Parker 1987).
 Importantly, while light alone (at these levels) may drive seasonal
 dynamics in the ways discussed, temperature fluctuations may attenuate
 or even reverse the effect of light as cooler winters depress
@@ -1695,6 +1698,13 @@ Doyle, and Roger M Nisbet. 2009. ``Dynamic energy budgets in syntrophic
 symbiotic relationships between heterotrophic hosts and photoautotrophic
 symbionts.'' \emph{Journal of Theoretical Biology} 259 (1): 44--57.
 doi:\href{https://doi.org/10.1016/j.jtbi.2009.03.004}{10.1016/j.jtbi.2009.03.004}.
+
+\hypertarget{ref-MullerParker:1987cr}{}
+Muller-Parker, Gisèle. 1987. ``Seasonal variation in light-shade
+adaptation of natural populations of the symbiotic sea anemone
+Aiptasiapulchella (Carlgren, 1943) in Hawaii.'' \emph{Journal of
+Experimental Marine Biology and Ecology} 112 (2): 165--83.
+doi:\href{https://doi.org/10.1016/0022-0981(87)90115-8}{10.1016/0022-0981(87)90115-8}.
 
 \hypertarget{ref-MullerParker:1994uo}{}
 Muller-Parker, Gisèle, Lawrence R McCloskey, Ove Hoegh-Guldberg, and PJ
