update numerical analysis text (RN)

--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -212,9 +212,11 @@ This second component of symbiont biomass loss represents both photodamage and/o
 
 ## Numerical analysis
 
-A time-stepping Euler method was used to solve the state equations since the production and rejection fluxes of the SUs are imiplicitly defined due to feedbacks present in the model. Specifically, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs act as reciprocal input fluxes to the other SU. In addition, the photosynthesis SU receives CO~2~ proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production (i.e., photoinhibition). A vector of time steps is used for each simulation, along which dynamic environmental forcing functions (irradiance, DIN, and prey abundance). These vectors, along with initial values of symbiont and host biomass, then serve as input to the time-stepping function, which solves for the current system state using values of the previous system state where necessary. A time step of 0.1 days was used for all simulations, which were performed using R code that is available in the data repository accompanying this article: [github.com/jrcunning/Rcoral](github.com/jrcunning/Rcoral). For steady state estimations, simulations were run until the change in both growth and S:H biomass was < 5e-7 per time step.
+The model dynamics are specified by the differential equations (1-2) that impose biomass balance for host and symbiont and by a set of coupled non-linear algebraic equations (3-21) that define fluxes. Several of these fluxes are defined *implicitly*; for example, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs, respectively, act as reciprocal input fluxes to the other SU. Similarly, the photosynthesis SU receives CO~2~ at a rate proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production through photoinhibition. Without further assumptions, however, the dynamical system is not always unambiguously defined because for some combinations of parameters and environmental forcing functions the system of algebraic equations has more than one solution with all fluxes non-negative (see results below). In such circumstances, the right hand side of the differential equations (1) and (2) is not uniquely defined even when $S$ and $H$ are specified. We resolved this problem by *defining the dynamical system* as the limit as a time step $\Delta t \rightarrow 0$ of a discretized system corresponding to Euler integration of the differential equations, with those fluxes that represent flows of elemental matter implemented by assuming that transfer of material between components of the system takes one time step. Thus, for example, CO~2~ rejected from the host SU at time $t$ arrives at the photosynthesis SU at time $t + \Delta t$. 
 
-To aid in visualizing model results, we calculated values to indicate the degree to which product formation at an SU was limited by availability of either of its two substrates:
+Simulations using the discretized scheme were performed using R code that is available in the data repository accompanying this article: github.com/jrcunning/Rcoral. By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. XXX in this paper). For steady state estimations, simulations were run until the change in specific growth rate of host and symbiont and the $S:H$ biomass ratio was less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code.
+
+To aid in visualizing model results, we calculated values to indicate the degree to which product formation at an SU was limited by availability of either of its two substrates using the formula
 
 \begin{equation} \log \bigg({{\min(j_{S1}, j_{Pm})} \over {\min(j_{S2}, j_{Pm})}}\bigg) \end{equation}
 
